# documents-vector-search

./: Dockerfile  collection_search_mcp_http_server.py  pyproject.toml
main/factories/: update_collection_factory.py
