[project]
name = "documents-vector-search"
version = "0.1.0"
description = "Project allows document indexing in a local vector database and then search (supports Jira, Confluence and local files, can be integrated via MCP)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "chromadb>=1.4.1",
    "bs4>=0.0.2",
    "langchain-text-splitters>=1.1.0",
    "mcp>=1.25.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "unstructured[all-docs]>=0.19.0",
    "toons>=0.5.3",
    "odfpy"
]

[dependency-groups]
dev = [
    "pytest",
]
